[package]
name = "geyserbench"
version = "1.2.2"
edition = "2024"

[dependencies]
tokio-stream = "0.1.17"
prost = "0.14"
prost-types = "0.14"
serde = "1"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
futures = "0.3.31"
futures-util = "0.3.31"
bs58 = "0.5.1"
bytes = "1.10.0"
bincode = "1.3.3"
solana-entry = "2"
solana-pubkey = "2"
lazy_static = "1.5.0"
dashmap = "6"
comfy-table = "7.1.0"
anyhow = "1"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-queue = "0.3"
thiserror = "1"
thorstreamer-grpc-client = "0.1.3"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
